# beebium

./: .clangd  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
clients/macos/Beebium/: README.md  project.yml
clients/macos/Beebium/Beebium/: BeebiumApp.swift  ContentView.swift  EmulatorView.swift  KeyboardClient.swift  KeyboardMTKView.swift  KeyboardMapper.swift  MetalRenderer.swift  Shaders.metal  VideoClient.swift
clients/macos/Beebium/Beebium/Proto/: video.proto
clients/macos/Beebium/BeebiumTests/: VideoClientTests.swift
clients/python/: README.md  pyproject.toml
clients/python/scripts/: generate_proto.sh
clients/python/src/beebium/: __init__.py  basic.py  client.py  connection.py  cpu.py  debugger.py  exceptions.py  keyboard.py  keyboard_map.py  memory.py  pytest_plugin.py  server.py  strings.py  video.py
clients/python/src/beebium/_proto/: __init__.py  debugger_pb2.py  debugger_pb2_grpc.py  keyboard_pb2.py  keyboard_pb2_grpc.py  video_pb2.py  video_pb2_grpc.py
clients/python/tests/: conftest.py  test_keyboard_map.py  test_memory.py  test_strings.py
docs/: clion-setup.md  deployment.md  grpc-server.md  ideas.md  keyboard-and-display.md  memory-histogram.md  mode-7-design-notes.md  pc-histogram.md  video-subsystem.md
scripts/: install-hooks  pre-commit
src/6502/: CMakeLists.txt
src/6502/include/6502/: 6502.h
src/6502/src/: 6502.c  6502_internal.inl
src/core/: CMakeLists.txt
src/core/include/beebium/: AddressableLatch.hpp  BankBinding.hpp  Beebium.hpp  BeebiumState.hpp  Clock.hpp  ClockBinding.hpp  ClockConcepts.hpp  ClockTypes.hpp  CpuBinding.hpp  CpuPolicy.hpp  FrameAllocator.hpp  FrameBuffer.hpp  FrameRenderer.hpp  IrqAggregator.hpp  KeyboardMatrix.hpp  Machine.hpp  Machines.hpp  Memory.hpp  MemoryHistogram.hpp  MemoryMap.hpp  MemoryRegion.hpp  ModelBHardware.hpp  ModelBMemory.hpp  ModelBPlusHardware.hpp  OutputQueue.hpp  PixelBatch.hpp  ProgramCounterHistogram.hpp  Saa5050.hpp  SystemViaPeripheral.hpp  TeletextFont.hpp  Types.hpp  Via6522.hpp  Via6522Types.hpp  VideoBinding.hpp  VideoRenderer.hpp
src/core/include/beebium/devices/: BankedMemory.hpp  Crtc6845.hpp  EmptySlot.hpp  Ram.hpp  Rom.hpp  VideoUla.hpp
src/core/src/: Beebium.cpp  BeebiumState.cpp  Memory.cpp  ModelBMemory.cpp  Via6522.cpp
src/server/: CMakeLists.txt  main.cpp  main_model_b.cpp  main_model_b_plus.cpp
src/server/include/beebium/server/: RomPaths.hpp  ServerMain.hpp
src/service/: CMakeLists.txt
src/service/include/beebium/service/: DebuggerService.hpp  KeyboardService.hpp  Server.hpp  VideoService.hpp
src/service/proto/: debugger.proto  keyboard.proto
src/service/src/: DebuggerService.cpp  KeyboardService.cpp  Server.cpp  VideoService.cpp
tests/: CMakeLists.txt  test_6502.cpp  test_a_trace.cpp  test_addressable_latch.cpp  test_boot.cpp  test_boot_sequence.cpp  test_boot_trace.cpp  test_cae0_caller.cpp  test_cae0_scans.cpp  test_cae0_trace.cpp  test_clearram.cpp  test_clearram_debug.cpp  test_clock.cpp  test_crtc6845.cpp  test_cursor.cpp  test_grpc_debugger.cpp  test_grpc_keyboard.cpp  test_grpc_video.cpp  test_irq_aggregator.cpp  test_keyboard_input.cpp  test_keyboard_race.cpp  test_keyflow.cpp  test_machine.cpp  test_memory.cpp  test_memory_histogram.cpp  test_memory_map.cpp  test_mode.cpp  test_pagedmode.cpp  test_rol_trace.cpp  test_saa5050.cpp  test_scancount.cpp  test_sta_iny.cpp  test_stack_trace.cpp  test_vdu_d0.cpp  test_via6522.cpp  test_video.cpp  test_video_ula.cpp
